--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   date_format: ^1.0.6
   toast: ^0.1.5
   # sqlite
-  sqflite: ^1.2.0
+  #sqflite: ^1.2.0
+  sqflite: ^1.3.0
   # Simple Animation
   simple_animations: ^1.3.8
   # Bloc
@@ -43,7 +44,8 @@ dependencies:
   # Dio
   dio: ^3.0.9
   # Svg image
-  flutter_svg: ^0.17.4
+  #flutter_svg: ^0.17.4
+  flutter_svg: ^0.19.0
   # Worm indicator
   worm_indicator: 0.2.1
   # Bottom Navigator
@@ -52,6 +54,8 @@ dependencies:
   flutter_rounded_date_picker: ^1.0.4
   # Dialog
   awesome_dialog: ^0.1.3
+
+  crypto: ^2.1.5
 
 dev_dependencies:
   flutter_test:
