--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="io.flutter.app.FlutterApplication"
         android:usesCleartextTraffic = "true"
         android:icon="@mipmap/ic_launcher"
         android:label="Kit Schedule">
@@ -27,11 +26,9 @@
                  there is no splash screen (such as the default splash screen
                  defined in @style/LaunchTheme). -->
             <meta-data
-                android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
-                android:value="true" />
-            <meta-data
-                android:name="flutterEmbedding"
-                android:value="2" />
+                android:name="io.flutter.embedding.android.SplashScreenDrawable"
+                android:resource="@drawable/launch_background" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -44,4 +41,8 @@
             </intent-filter>
         </receiver>
     </application>
+    <meta-data
+        android:name="flutterEmbedding"
+        android:value="2" />
+
 </manifest>
