fix sign apk, add mock data

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,10 +35,10 @@ android {
             storePassword 'Hat112358'
         }
         debug {
-            storeFile file("C:\\Users\\Admin\\my-release-key.keystore")
+            /*storeFile file("C:\\Users\\Admin\\my-release-key.keystore")
             storePassword 'android'
             keyAlias 'hieu'
-            keyPassword 'android'
+            keyPassword 'android'*/
         }
     }
     lintOptions {
@@ -93,5 +93,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
+    implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
 }
