--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,11 @@
 **/android/.gradle
 **/android/captures/
 **/android/gradlew
+**/android/app/local.properties
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
