--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   dio: ^3.0.9
   # Svg image
   #flutter_svg: ^0.17.4
-  flutter_svg: ^0.19.0
+  flutter_svg:
   # Worm indicator
   worm_indicator: 0.2.1
   # Bottom Navigator
@@ -56,7 +56,7 @@ dependencies:
   awesome_dialog: ^0.1.3
   get_it: ^5.0.4
 
-  crypto: ^2.1.5
+  crypto:
   flutter_screenutil: ^4.0.2+5
   cupertino_date_textbox: ^1.0.0+3
 
