--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -22,49 +22,49 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.3
   # DateFormat
-  intl: ^0.16.1
+  intl: ^0.17.0
   # Table Calendar
-  table_calendar: ^2.2.3
+  table_calendar: ^3.0.1
   # shared_preferences
-  shared_preferences: ^0.5.6
+  shared_preferences: ^2.0.6
   # Date Format
-  date_format: ^1.0.6
-  toast: ^0.1.5
+  date_format: ^2.0.2
+  #toast: ^0.1.5
   # sqlite
   #sqflite: ^1.2.0
-  sqflite: ^1.3.0
+  sqflite: ^2.0.0+3
   # Simple Animation
-  simple_animations: ^1.3.8
+  simple_animations: ^3.1.1
   # Bloc
-  flutter_bloc: ^3.2.0
+  flutter_bloc: ^7.0.1
   # Equatable
-  equatable: ^1.1.1
+  equatable: ^2.0.3
   # Dio
-  dio: ^3.0.9
+  dio: ^4.0.0
   # Svg image
   #flutter_svg: ^0.17.4
-  flutter_svg:
+  flutter_svg: ^0.22.0
   # Worm indicator
-  worm_indicator: 0.2.1
+  #worm_indicator: 0.2.1
   # Bottom Navigator
-  google_nav_bar: ^2.1.0
+  google_nav_bar: ^5.0.5
   # DatePicker
-  flutter_rounded_date_picker: ^1.0.4
+  flutter_rounded_date_picker: ^2.0.2
   # Dialog
-  awesome_dialog: ^0.1.3
-  get_it: ^5.0.4
+  awesome_dialog: ^2.1.0
+  get_it: ^7.2.0
 
-  crypto:
-  flutter_screenutil: ^4.0.2+5
-  cupertino_date_textbox: ^1.0.0+3
+  crypto: ^3.0.1
+  flutter_screenutil: ^5.0.0+2
+  #cupertino_date_textbox: ^1.0.0+3
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito:
+  mockito: ^5.0.11
 
 
 # For information on the generic Dart part of this file, see the
