--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.11
-
+  flutter_native_splash: ^1.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
