--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   #toast: ^0.1.5
   # sqlite
   #sqflite: ^1.2.0
+  hive: ^2.0.4
   sqflite: ^2.0.0+3
   # Simple Animation
   simple_animations: ^3.1.1
@@ -55,7 +56,7 @@ dependencies:
   # Dialog
   awesome_dialog: ^2.1.0
   get_it: ^7.2.0
-
+  path_provider: ^2.0.2
   crypto: ^3.0.1
   flutter_screenutil: ^5.0.0+2
   #cupertino_date_textbox: ^1.0.0+3
@@ -66,6 +67,8 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.0.11
   flutter_native_splash: ^1.2.0
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
