--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   #cupertino_date_textbox: ^1.0.0+3
   firebase_core: ^1.4.0
+  store_redirect: ^2.0.0
   cloud_firestore: ^2.4.0
 
 
