--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   #cupertino_date_textbox: ^1.0.0+3
   firebase_core: ^1.4.0
   store_redirect: ^2.0.0
+  webview_flutter: ^2.0.12
+  url_launcher: ^6.0.9
   cloud_firestore: ^2.4.0
 
 
