--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   url_launcher: ^6.0.9
   cloud_firestore: ^2.4.0
   connectivity: ^3.0.6
+  flutter_keyboard_visibility: ^5.0.3
+
 
 
 dev_dependencies:
