--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   cloud_firestore: ^2.4.0
   connectivity: ^3.0.6
   flutter_keyboard_visibility: ^5.0.3
+  device_calendar: ^3.1.0
 
 
 
