request permisson canlendar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_localizations: # Add this line
     sdk: flutter
   device_calendar: ^4.0.1-dev.13167
+  permission_handler: ^8.1.4+2
 
 dev_dependencies:
   flutter_test:
