--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 6.0.3+1
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -28,37 +28,37 @@ dependencies:
   # Table Calendar
   #table_calendar: ^2.3.3
   # shared_preferences
-  shared_preferences: ^0.5.6
+  shared_preferences: any
   # Date Format
-  date_format: ^1.0.6
-  toast: ^0.1.5
+  date_format: any
+  toast: any
   # sqlite
   #sqflite: ^1.2.0
-  sqflite: ^1.3.0
+  sqflite: any
   # Simple Animation
-  simple_animations: ^1.3.8
+  simple_animations: any
   # Bloc
   flutter_bloc: ^3.2.0
   # Equatable
-  equatable: ^1.1.1
+  equatable: any
   # Dio
-  dio: ^3.0.9
+  dio: any
   # Svg image
   #flutter_svg: ^0.17.4
-  flutter_svg: ^0.19.0
+  flutter_svg: any
   # Worm indicator
-  worm_indicator: 0.2.1
+  worm_indicator: any
   # Bottom Navigator
-  google_nav_bar: ^2.1.0
+  google_nav_bar: any
   # DatePicker
-  flutter_rounded_date_picker: ^1.0.4
+  flutter_rounded_date_picker: any
   # Dialog
-  awesome_dialog: ^0.1.3
-  get_it: ^5.0.4
+  awesome_dialog: any
+  get_it: any
 
-  crypto: ^2.1.5
-  flutter_screenutil: ^4.0.2+5
-  simple_gesture_detector: ^0.1.5
+  crypto: any
+  flutter_screenutil: any
+  simple_gesture_detector: any
   #google
   firebase_core: "0.5.0"
   firebase_auth: "^0.18.0+1"
